plex/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: plex-plex-media-server
  namespace: plex
spec:
  ports:
    - name: pms
      protocol: TCP
      port: 32400
      targetPort: 32400
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
