plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: plex-plex-media-server
          kind: Service
          namespace: plex
          port: pms
  tls:
    secretName: plex-pms-tls
